2006-01-22  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.8 and bumped up to version
	0.0.9.

2005-11-05  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Setup a package for CVS.

	* ChangeLog: Created this file.