@@ -24,9 +24,56 @@ AC_PATH_PROG(OCTAVE, octave, :)
 AC_PATH_PROG(LATEX2HTML, latex2html, :)
 AC_PATH_PROG(TEX2PDF, tex2pdf, :)
 
+dnl Define the check for doxygen.
+AC_DEFUN([BB_ENABLE_DOXYGEN],
+[
+AC_ARG_ENABLE([doxygen],
+[  --enable-doxygen        enable documentation generation with doxygen @<:@auto@:>@])
+AC_ARG_ENABLE([dot],
+[  --enable-dot            use 'dot' to generate graphs in doxygen @<:@auto@:>@])
+AC_ARG_ENABLE([html-docs],
+[  --enable-html-docs      enable HTML generation with doxygen @<:@yes@:>@],
+[], [ enable_html_docs=yes])
+AC_ARG_ENABLE([latex-docs],
+[  --enable-latex-docs     enable LaTeX generation with doxygen @<:@no@:>@],
+[], [ enable_latex_docs=no])
+if test "x$enable_doxygen" = xno; then
+  enable_doc=no
+else
+  AC_PATH_PROG(DOXYGEN, doxygen, , $PATH)
+  if test x$DOXYGEN = x; then
+    if test "x$enable_doxygen" = xyes; then
+      AC_MSG_ERROR([could not find doxygen])
+    fi
+    enable_doc=no
+  else
+    enable_doc=yes
+    AC_PATH_PROG(DOT, dot, , $PATH)
+  fi
+fi
+AM_CONDITIONAL(DOC, test x$enable_doc = xyes)
+if test x$DOT = x; then
+  if test "x$enable_dot" = xyes; then
+    AC_MSG_ERROR([could not find dot])
+  fi
+  enable_dot=no
+else
+  enable_dot=yes
+fi
+AM_CONDITIONAL(ENABLE_DOXYGEN, test x$enable_doc = xtrue)
+AM_CONDITIONAL(ENABLE_DOT, test x$enable_dot = xtrue)
+AC_SUBST(enable_dot)
+AC_SUBST(enable_html_docs)
+AC_SUBST(enable_latex_docs)
+])
+
+dnl Check for doxygen.
+BB_ENABLE_DOXYGEN
+
 dnl Add here all your Makefiles. These are created by configure.
 AC_CONFIG_FILES([Makefile
-                 technical/Makefile
+		 doxygen/Makefile
+		 technical/Makefile
 		 tutorial/Makefile
 		 tutorial/dcstatic/Makefile
 		 tutorial/dcstatic/pics/Makefile
