@@ -1,3 +1,7 @@
+2006-01-31  Stefan Jahn  <stefan@lkcc.org>
+
+	* doxygen/Makefile.am: Added doxygen sub directory.
+
 2006-01-22  Stefan Jahn  <stefan@lkcc.org>
 
 	* configure.ac: Released version 0.0.8 and bumped up to version
